--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@iminside/react-yandex-maps": "^1.2.7",
+    "dotenv": "^17.2.1",
+    "mongodb": "^6.18.0",
+    "mongoose": "^8.16.5",
     "motion": "^12.23.6",
     "next": "15.3.4",
     "react": "^19.0.0",
@@ -23,6 +26,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "migrate-mongo": "^12.1.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
